tests/baselines/reference/overloadsAndTypeArgumentArityErrors.errors.txt
overloadsAndTypeArgumentArityErrors.ts(5,11): error TS2558: Expected 2 type arguments, but got 3.
overloadsAndTypeArgumentArityErrors.ts(6,15): error TS2558: Expected 2 type arguments, but got 3.
overloadsAndTypeArgumentArityErrors.ts(9,1): error TS2554: Expected 1 arguments, but got 0.


==== overloadsAndTypeArgumentArityErrors.ts (3 errors) ====
    declare function Callbacks(flags?: string): void;
    declare function Callbacks<T>(flags?: string): void;
    declare function Callbacks<T1, T2>(flags?: string): void;
    
    Callbacks<number, string, boolean>('s'); // wrong number of type arguments
              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 3.
    new Callbacks<number, string, boolean>('s'); // wrong number of type arguments
                  ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 3.
    
    declare function f<A, B = {}>(arg: number): void;
    f<number>(); // wrong number of arguments (#25683)
    ~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 overloadsAndTypeArgumentArityErrors.ts:8:31: An argument for 'arg' was not provided.
    